[package]
name = "dreamdeck"
version = "0.1.0"
authors = ["netpro2k <netpro2k@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
midir = "0.8.0"
rust-pulsectl-fork = "0.2.12"
anyhow = "1.0.0"

[dependencies.pulse]
version = "2.22.0"
package = "libpulse-binding"
